--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
           </div>
           <div class="frame-9">
             <div class="text-wrapper-10">Services</div>
-            <div class="text-wrapper-15">Free wifi</div>
+            <div class="text-wrapper-15">Free WiFi</div>
             <div class="text-wrapper-15">Specialty coffee</div>
             <div class="text-wrapper-15">Delicious bites</div>
             <div class="text-wrapper-15">Catering</div>
